Sat Feb 21 15:42:39 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* glib/gqueue.c: Some documentation fixes.

Sat Feb 21 13:45:08 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* glib/gqueue.[ch]: Extend GQueue API to match the GList
	API. (#78414).

	* tests/queue-test.c: Update test suite to cover the new API.

Fri Feb 20 03:02:05 2004  Tim Janik  <timj@gtk.org>

	* glib/ghash.[hc]: applied patch from #131937 with slight
	renames. provides g_hash_table_find().

Fri Feb 20 02:39:03 2004  Tim Janik  <timj@gtk.org>

	* applied patch from David Schleef <ds@schleef.org> which implements
	a G_MODULE_BIND_LOCAL flag to g_module_open() to disable global
	symbol registration.

Thu Feb 19 18:40:01 2004  Tim Janik  <timj@gtk.org>

	* glib/gstring.[hc]: for G_CAN_INLINE environments, inline
	g_string_append_c() for efficiency. (vaguely based on #118707).

Wed Feb 18 23:57:42 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gmain.c: Include signal.h for SIGCHLD.  (#134622, Damien
	Carbery)

2004-02-18  Sebastian Wilhelmi  <seppi@seppi.de>

	* glib/gasyncqueue.c: Lazy creation of GCond. Only
	signal GCond, if threads are waiting.

	* glib/gmain.c (g_main_context_new): Set context->wake_up_pipe
	only for G_THREADS_ENABLED.

Sat Feb 14 11:05:26 2004  Manish Singh  <yosh@gimp.org>

	* configure.in: Remove unnecessary STRIP_* definitions, and GNU
	make check. Really fixes #134102.

Sat Feb 14 02:11:08 2004  Matthias Clasen  <maclas@gmx.de>

	* configure.in: Make the check for GNU make work when MAKE is a 
	full path.  (#134102, Julio M. Merino Vidal)

Sat Feb 14 02:08:03 2004  Matthias Clasen  <maclas@gmx.de>

	* configure.in: Suppress xsltproc and xmlcatalog checks
	if enable_man=no.  (#134091, Julio M. Merino Vidal)

Sat Feb 14 01:21:34 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gmain.h: 
	* glib/gmain.c (g_child_watch_source_new): 
	* glib/gmain.c (g_child_watch_add): 
	* glib/gmain.c (g_child_watch_add_full): Wrap waitpid() as a